[package]
name = "kvs"
version = "0.1.0"
authors = ["Kaifoon <zerco@foxmail.com>"]
edition = "2018"
description = "A Key Value Store Machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.5"

