[package]
name = "kvs"
version = "0.1.0"
authors = ["Kaifoon <zerco@foxmail.com>"]
edition = "2018"
description = "A Key Value Store Machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
thiserror = "1.0.22"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.5"
tempfile = "3.1.0"
walkdir = "2.3.1"

