[package]
name = "kvs"
version = "0.1.0"
authors = ["Kaifoon <zerco@foxmail.com>"]
edition = "2018"
description = "A Key Value Store Machine"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
sled = "0.34.6"
slog = "2.7.0"
slog-async = "2.5.0"
slog-term = "2.6.0"
thiserror = "1.0.22"

[dev-dependencies]
assert_cmd = "1.0.2"
criterion = "0.3.3"
predicates = "1.0.5"
rand = "0.8.0"
tempfile = "3.1.0"
walkdir = "2.3.1"

[[bench]]
name="engine_bench"
harness = false
